# torchcodec

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: build_ffmpeg.yaml  docs.yaml  lint.yaml  linux_cuda_aarch64_wheel.yaml  linux_cuda_wheel.yaml  linux_wheel.yaml  macos_wheel.yaml  reference_resources.yaml  windows_wheel.yaml
benchmarks/decoders/: benchmark_transforms.py  gpu_benchmark.py
benchmarks/samplers/: benchmark_samplers.py
docs/: requirements.txt
docs/source/: api_ref_decoders.rst  api_ref_encoders.rst  api_ref_transforms.rst  conf.py  index.rst
examples/decoding/: approximate_mode.py  basic_cuda_example.py  basic_example.py  custom_frame_mappings.py  parallel_decoding.py  sampling.py
examples/encoding/: video_encoding.py
packaging/: build_ffmpeg.bat  build_ffmpeg.sh  check_glibcxx.py  helpers.sh  post_build_script.sh  pre_build_script.sh  vc_env_helper.bat
src/torchcodec/: __init__.py  _frame.py  _internally_replaced_utils.py
test/: CMakeLists.txt  MetadataTest.cpp  VideoDecoderTest.cpp  conftest.py  generate_reference_resources.py  test_decoders.py  test_encoders.py  test_metadata.py  test_ops.py  test_samplers.py  test_transform_ops.py  utils.py
test/decoders/: CMakeLists.txt
test/resources/: nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000000.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000015.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000200.pt  nasa_13013.mp4.crop_300_200_50_35_exact_1.stream3.frame000389.pt  testsrc2_mpeg4.avi  (+5 more)
(+61 files in other folders)
